kubernetes-manifests/backend-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  selector:
    matchLabels:
      app: backend-deployment
      tier: backend
  template:
    metadata:
      labels:
        app: backend-deployment
        tier: backend
    spec:
      containers:
        - image: "yashdock90/kube-human-backend-1:multiple"
          imagePullPolicy: Always
          name: backend-server-1
          ports:
            - containerPort: 3000
        - image: "yashdock90/kube-human-backend-2:multiple"
          imagePullPolicy: Always
          name: backend-server-2
          ports:
            - containerPort: 3001
        - image: "yashdock90/kube-human-backend-3:multiple"
          imagePullPolicy: Always
          name: backend-server-3
          ports:
            - containerPort: 3002
