kubernetes-manifests/backend-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app: backend-deployment
    tier: backend
  type: LoadBalancer
