kubernetes-manifests/frontend-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: frontend-deployment
    tier: frontend
  type: LoadBalancer
