kubernetes-manifests/ingress-controller.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: simple-fanout-example
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:  
    serviceName: backend-service
    servicePort: 80
  rules:
  - host: foo.bar.com
    http:
      paths:
      - path: /uno/(.+)
        backend:
          serviceName: backend-service
          servicePort: 3000
      - path: /dos/*
        backend:
          serviceName: backend-service
          servicePort: 3001
      - path: /tres/(.+)
        backend:
          serviceName: backend-service
          servicePort: 3002
